--- a/portfolio/src/styles/footer.css
+++ b/portfolio/src/styles/footer.css
@@ -29,7 +29,6 @@ footer {
   
   @media (max-width: 768px) {
     footer {
-      position: relative;
-    }
+      position: fixed;
   }
-  
+}
